// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`libA.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare function foo(x: number): void;

=====================================output=====================================
declare function foo(x: number): void;

================================================================================
`;

exports[`libB.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare function bar(x: string): void;

=====================================output=====================================
declare function bar(x: string): void;

================================================================================
`;

exports[`libtest.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo(123);
bar(123);

=====================================output=====================================
foo(123);
bar(123);

================================================================================
`;
